--- a/style.css
+++ b/style.css
@@ -22,17 +22,17 @@ body{
 }
 
 .exp{
-    margin: 1%;
+    /* margin: 1%; */
     padding: 1%;
 }
 
 .header{
-    padding: 2%;
+    /* padding: 2%; */
     display: flex;
     justify-content: space-between;
 }
 .basic-info{
-    align-self: flex-start;
+    /* align-self: flex-start; */
     flex: 1;
 }
 .name{
@@ -70,7 +70,7 @@ body{
     
 }
 .separator{
-    width: 98%;
+    width: 100%;
     height: 3px;
     background-color: #109c4f;
     margin: 0 auto 1% auto;
@@ -149,21 +149,22 @@ body{
 }
 
 .exp1 .point::after{
-    width: 280px;
+    width: 250px;
 }
 
 .exp2 .point::after{
-    width: 100px;
+    /* width: 20px; */
     border: dotted 2px solid black;
 }
 
 .exp.present{
-    margin-left: 60px;
+    /* margin-left: 10px; */
 }
 
 .present .point{
     position: absolute;
-    top: 75px;
+    top: 71px;
+    /* right: 80px; */
     height: 5px;
     width: 5px;
     background-color: transparent;
@@ -172,6 +173,7 @@ body{
 
 .present .duration{
     position: absolute;
+    right: 40px;
     bottom: 40px;
 }
 
@@ -212,7 +214,7 @@ body{
 }
 
 ul{
-    list-style: outside;
+    list-style: none;
 }
 
 .project-name{
